sugar-web-activity (91-1) unstable; urgency=low

  * New upstream release.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 21 Jun 2008 02:02:48 +0200

sugar-web-activity (89-1) unstable; urgency=low

  * New upstream release.
  * Add watch file.
  * Update debian/copyright:
    + Add URL to upstream tarball source.
    + Add a few new files (same owner and license).
  * Update local cdbs snippets:
    + Use upstream-tarball.mk to track upstream source releases.
    + Adjust dependency cleanup (upstream-tarball.mk needs newer cdbs).
    + Fix python-sugar.mk to work with recent python-sugar-toolkit where
      MANIFEST files are ignored and an internal hardcoded exception
      list is used instead.  Tighten build-dependency.
  * Semi-auto-update debian/control to update build-dependencies:
      DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean

 -- Jonas Smedegaard <dr@jones.dk>  Wed, 11 Jun 2008 12:39:54 +0200

sugar-web-activity (78~git.20080311-1) UNRELEASED; urgency=low

  * Initial release. Closes: bug#444021.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 28 Apr 2008 12:22:57 +0200