@@ -1,6 +1,11 @@
 sugar-web-activity (91-1) unstable; urgency=low
 
   * New upstream release.
+  * Update local cdbs snippets:
+    + Relax copyright-check to only warn about its discoveries.  Closes:
+      bug#486975.
+  * Update debian/copyright (new files, same owners and licenses).
+    Update debian/copyright-hints.
 
  -- Jonas Smedegaard <dr@jones.dk>  Sat, 21 Jun 2008 02:02:48 +0200
 
